--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>공지사항</title>
-  <link rel="stylesheet" href="/static/style.css">
-</head>
-<body>
-  <h2>공지사항</h2>
-  <a href="/write">글쓰기</a>
-  <ul>
-    {% for post in posts %}
-      <li><a href="/post/{{ post.id }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</body>
-</html>
+<ul>
+  {% for post in posts %}
+    <li>
+      <a href="/post/{{ loop.index0 }}">{{ post.title }}</a><br>
+      <small>작성자: {{ post.author }} | 날짜: {{ post.date }}</small>
+    </li>
+    <hr>
+  {% endfor %}
+</ul>
+<a href="/write">글쓰기</a>
