--- a/templates/write.html
+++ b/templates/write.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>글쓰기</title>
-</head>
-<body>
-  <h2>글쓰기</h2>
-  <form method="post">
-    <input type="text" name="title" placeholder="제목"><br>
-    <textarea name="content" placeholder="내용"></textarea><br>
-    <button type="submit">등록</button>
-  </form>
-</body>
-</html>
+<form action="/write" method="POST">
+  <label for="title">제목</label><br>
+  <input type="text" name="title" required><br><br>
+
+  <label for="author">작성자</label><br>
+  <input type="text" name="author" required><br><br>
+
+  <label for="content">내용</label><br>
+  <textarea name="content" rows="10" cols="40" required></textarea><br><br>
+
+  <button type="submit">글 작성하기</button>
+</form>
